# api.coffeeheim.com

./: Dockerfile  Makefile  compose.yml  pyproject.toml  requirements.txt
app/: configs.py  fileutils.py  main.py
app/routers/: permittedlist.py  status.py
tests/: status_sample.json  test_fileutils.py  test_routes.py
