[tool.poetry]
name = "api.coffeeheim.com"
version = "0.1.0"
description = "Yet another valheim server"
authors = ["Sérgio Rafael Siqueira <osergiosiqueira@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"


[tool.black]
line-length = 79
skip-string-normalization = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"